# centripetal

./: .gitignore  .gitmodules  Cargo.toml  Rustfmt.toml  a  build.rs
.cargo/: config.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: control.rs  input.rs  lib.rs  main.rs  picking.rs  storage.rs
src/editor/: init.rs  mod.rs
src/editor/widgets/: collider.rs  mod.rs
src/persist/: def.rs  impls.rs  mod.rs  serde.rs
src/world/: collider.rs  mod.rs
