[package]
name = "centripetal"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "centripetal-desktop"
path = "src/main.rs"

[dependencies]
hephae = "0.7"
mimalloc-redirect = "0.1"

[dependencies.avian2d]
version = "0.2"
default-features = false
features = [
    "2d",
    "bevy_picking",
    "parallel",
    "f32",
    "parry-f32",
    "simd",
    "serialize",
]

[dependencies.bevy]
version = "0.15"
default-features = false
features = [
    "multi_threaded",
    "serialize",
    "bevy_core_pipeline",
    "bevy_picking",
    "bevy_winit",
]

[patch.crates-io]
mimalloc-redirect = { path = "../mimalloc-redirect" }
