[package]
name = "centripetal"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "centripetal-desktop"
path = "src/main.rs"

[dependencies]
hephae = "0.7"

[dependencies.avian2d]
version = "0.2"
default-features = false
features = [
    "2d",
    "bevy_picking",
    "parallel",
    "f32",
    "parry-f32",
    "simd",
]

[dependencies.bevy]
version = "0.15"
default-features = false
features = [
    "android-game-activity",
    "multi_threaded",
    "webgl2",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_picking",
    "bevy_winit",
]

[dependencies.leafwing-input-manager]
version = "0.16"
default-features = false
features = [
    "asset",
    "keyboard",
]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mimalloc-redirect = "0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
